# khiip

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: no-claude-coauthor.yml  path-guard.yml
_scripts/: no-claude-coauthor.sh  path-guard.sh
_scripts/bench/: sqlite-graph-traversal-bench.py
_scripts/smoke/: recall_roundtrip.sh
docs/adr/: ADR-0001-genesis.md  ADR-0002-pricing-promises-free-layer.md  ADR-0003-strategic-positioning-llm-ingestion-layer.md  ADR-0004-naming-lock-khiip.md  ADR-0005-hybrid-edge-typing.md  ADR-0006-strategic-positioning-shape-d-promoted.md  ADR-0007-graph-layer-custom-sqlite.md  ADR-0008-standalone-vocabulary.md
src/khiip/: auth.py  cli.py  config.py  daemon.py  models.py  version.py
src/khiip/embeddings/: __init__.py  base.py  minilm.py
src/khiip/extractors/: __init__.py  base.py  pdf.py  resilience.py  web.py  x.py  youtube.py
src/khiip/storage/: captures.py  db.py  embeddings_store.py  filesystem.py  schema.sql
tests/: conftest.py  test_config.py  test_daemon_smoke.py  test_embeddings_store.py  test_env_isolation.py  test_extractors.py  test_storage.py
