[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"


[project]
name = "khiip"
version = "0.0.1"
description = "Capture, store, and recall substrate for LLM agents. The layer, not the destination."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Khiip" },
]
keywords = ["llm", "agents", "capture", "memory", "knowledge-graph", "mcp", "rag"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-ulid>=2.7",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "fastembed>=0.4,<1",
    "numpy>=1.26,<3",
    "trafilatura>=2.0,<3",
    "readability-lxml>=0.8,<1",
    "markdownify>=1.0,<2",
    "markitdown>=0.1,<1",
    "pdfplumber>=0.11,<1",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]


[project.scripts]
khiipd = "khiip.cli:main"


[project.urls]
Homepage = "https://khiip.com"
Repository = "https://github.com/khiip-ai/khiip"
Issues = "https://github.com/khiip-ai/khiip/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/khiip"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-too-long handled by formatter
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers"]
asyncio_mode = "auto"
